[gd_scene load_steps=14 format=3 uid="uid://bwowp0bkfrp51"]

[ext_resource type="Script" uid="uid://bcprnv00b0t0m" path="res://Scripts/game.gd" id="1_ebmjs"]
[ext_resource type="Texture2D" uid="uid://mhf6b7a8q0k5" path="res://Assets/Wallpaper.png" id="2_qxrlw"]
[ext_resource type="Texture2D" uid="uid://cqd05tgxpvpyt" path="res://Assets/Kid.png" id="3_wrm1d"]
[ext_resource type="FontFile" uid="uid://6e6w6vprdpnh" path="res://Fonts/Pricedown Bl.otf" id="4_3dryh"]
[ext_resource type="AudioStream" uid="uid://dmjnwti36c3q2" path="res://Soundtrack16.wav" id="5_wowpa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wrm1d"]
texture = ExtResource("2_qxrlw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3dryh"]
texture = ExtResource("3_wrm1d")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1l0tm"]
bg_color = Color(0.17641908, 0.17641911, 0.17641902, 1)

[sub_resource type="GDScript" id="GDScript_3dryh"]
script/source = "extends Panel
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dryh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wowpa"]
bg_color = Color(0.4700758, 0.47007585, 0.47007567, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6g32"]
bg_color = Color(0.65834004, 0.6583399, 0.6583399, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1l0tm"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ebmjs")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="ReactionTimer" type="Timer" parent="."]

[node name="Background" type="Panel" parent="."]
offset_left = -1.0
offset_top = -1.0
offset_right = 1154.0
offset_bottom = 651.0
theme_override_styles/panel = SubResource("StyleBoxTexture_wrm1d")

[node name="Kid" type="Panel" parent="."]
offset_left = 5.0
offset_top = 4.0
offset_right = 1151.0
offset_bottom = 668.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3dryh")

[node name="6" type="Label" parent="."]
offset_left = 476.0
offset_top = 284.0
offset_right = 678.0
offset_bottom = 767.0
theme_override_colors/font_color = Color(0.90526885, 3.3450872e-06, 1.1551381e-06, 1)
theme_override_fonts/font = ExtResource("4_3dryh")
theme_override_font_sizes/font_size = 200
text = "6
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="7" type="Label" parent="."]
offset_left = 476.0
offset_top = 284.0
offset_right = 678.0
offset_bottom = 767.0
theme_override_colors/font_color = Color(0.90526885, 3.3450872e-06, 1.1551381e-06, 1)
theme_override_fonts/font = ExtResource("4_3dryh")
theme_override_font_sizes/font_size = 200
text = "7
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="67" type="Label" parent="."]
offset_left = 476.0
offset_top = 284.0
offset_right = 678.0
offset_bottom = 584.0
theme_override_colors/font_color = Color(0.90526885, 3.3450872e-06, 1.1551381e-06, 1)
theme_override_fonts/font = ExtResource("4_3dryh")
theme_override_font_sizes/font_size = 200
text = "67"
horizontal_alignment = 1

[node name="LabelScoreN" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 938.0
offset_top = 4.0
offset_right = 1153.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("4_3dryh")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 346.0
offset_top = 191.0
offset_right = 813.5
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1l0tm")
script = SubResource("GDScript_3dryh")

[node name="Text" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -193.5
offset_right = 113.0
offset_bottom = -82.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
text = "YOU LOST !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Replay" type="Button" parent="Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.75
offset_top = 81.0
offset_right = -16.75
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_3dryh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wowpa")
theme_override_styles/hover = SubResource("StyleBoxFlat_i6g32")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1l0tm")
text = "Restart"

[node name="Back" type="Button" parent="Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.25
offset_top = 81.0
offset_right = 195.25
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_3dryh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wowpa")
theme_override_styles/hover = SubResource("StyleBoxFlat_i6g32")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1l0tm")
text = "Back"

[node name="LabelScoreN" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.75
offset_top = -626.5
offset_right = 234.25
offset_bottom = 573.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("4_3dryh")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wowpa")
autoplay = true
bus = &"Music"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ReactionTimer" to="." method="_on_reaction_timer_timeout"]
[connection signal="pressed" from="Score/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="Score/Back" to="." method="_on_back_pressed"]
